--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "scripts": {
-    "demo": "postcss hello.css --use autoprefixer -d ./build/"
+    "demo": "webpack && open index.html"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "postcss-cli": "^6.0.0"
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.1",
+    "postcss-cli": "^6.0.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^3.1.2",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   }
 }
