--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "scripts": {
-    "demo": "webpack && open index.html"
+    "demo": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.1",
-    "postcss-cli": "^6.0.0",
+    "css-loader": "3.2.0",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "postcss-cli": "6.1.3",
     "postcss-loader": "^3.0.0",
-    "precss": "^3.1.2",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "postcss-nested": "4.1.2",
+    "style-loader": "1.0.0",
+    "webpack": "4.41.0",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.1"
   }
 }
