--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "scripts": {
-    "demo": "webpack-dev-server --open"
-  },
-  "devDependencies": {
-    "css-loader": "3.2.0",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "postcss-cli": "6.1.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "4.1.2",
-    "style-loader": "1.0.0",
-    "webpack": "4.41.0",
-    "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.1"
-  }
+    "scripts": {
+        "start": "webpack-dev-server --open"
+    },
+    "devDependencies": {
+        "css-loader": "3.2.0",
+        "html-webpack-plugin": "4.0.0-beta.5",
+        "postcss-cli": "6.1.3",
+        "postcss-loader": "^3.0.0",
+        "postcss-nested": "4.1.2",
+        "style-loader": "1.0.0",
+        "webpack": "4.41.0",
+        "webpack-cli": "3.3.9",
+        "webpack-dev-server": "3.8.1"
+    }
 }
